# src/routes/products.js
@@ -1,7 +1,9 @@
 import express from 'express';
-import { getProductsController, getProductDetailsController } from '../controllers/products.js';
+import { getProductsController, getProductDetailsController, getProductCategoriesController } from '../controllers/products.js';
 
 const router = express.Router();
+
+router.get('/categories', getProductCategoriesController);
 
 router.get('/', getProductsController);
 
